Add relative path
Add relative path to location.shp

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bairros = r'recursos\\bairros\\bairros_rj.shp'\n",
+    "bairros = r'./recursos/bairros/bairros_rj.shp'\n",
     "gdf_bairros = gpd.read_file(bairros)\n",
     "polygon = gdf_bairros['geometry'][10]"
    ]
@@ -277,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
